--- a/src/routes/(admin)/app.postcss
+++ b/src/routes/(admin)/app.postcss
@@ -1,8 +1,15 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@tailwind variants;
+
 /*place global styles here */
 html,
 body {
 	@apply h-full;
 }
+
+
 
 @font-face {
 	font-family: 'Quicksand';
